--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://www.w3schools.com/html/styles.css">
+/* CSS Reference from W3School: https://www.w3schools.com/cssref/ */
 
 
 <!DOCTYPE html>
