--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /* CSS Reference from W3School: https://www.w3schools.com/cssref/ */
+<link rel="stylesheet" href="../../../resources/stylesheet.min.css">
 
 
 <!DOCTYPE html>
