--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,34 @@ p    {color: red;}
 
 </body>
 </html>
+
+}
+#dropdown{
+    border: 1px solid gray;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background-color: white;
+    text-align: left;
+    padding: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 390px;
+}
+#icon{
+    text-align: right;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: white;
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.menu_back1{
+    background-color: #808080;
+}
+.menu_back2{
+    background-color: #404040;
+}
