--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ pre, code, .blob-code, .blob-code-marker {
   font-family: 'Fira Code', monospace !important;
 }
 
-
+ <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 <link rel=' href='index.css' type='text' />
 
 
