--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ pre, code, .blob-code, .blob-code-marker {
 }
 
  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-<link rel=' href='index.css' type='text' />
+<link rel=' href='css' type='text' />
 
 
 <!DOCTYPE html>
