--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,10 @@ pre, code, .blob-code, .blob-code-marker {
   font-family: 'Fira Code', monospace !important;
 }
 
- <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-<link rel=' href='css' type='text' />
 
+ <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+<style>
 
 <!DOCTYPE html>
 <html>
