--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ pre, code, .blob-code, .blob-code-marker {
   font-family: 'Fira Code', monospace !important;
 }
 
- <link href="css/styles.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://michellebounajem.github.io/EDPS____Michellebounajem">
 
 <!DOCTYPE html>
 <html>
