--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,53 @@
-
-:root {
-  --black: #404040;
-  --primary-color: #81d4fa; /* blue */
-  --primary-color-lighten-1: #b3e5fc;
-  --primary-color-darken-1: #4fc3f7;
-  --secondary-color: #ff7043; /* orange */
-  --secondary-color-lighten-1: #ff8a65;
-  --secondary-color-darken-1: #ff5722;
-  --tertiary-color: #ffeb3b;
-  --primary-font: 'Playfair Display', serif;
-  --secondary-font: 'Josefin Sans', sans-serif;
-
+div#playground{
+    height: 100vh;
+    background-color: lightgray;
 }
-
-
-/* ===== Materialize Overrides ===== */
-body,
-p,
-a,
-button {
-  font-family: 'Playfair Display', serif; /* IE fallback */
-  font-family: var(--primary-font);
+#playground .row{
+    height: 100%;
 }
-
+#playground .col{
+    height: 100%;
+}
+#box_1, #box_2{
+    background-color: white;
+    border: 1px solid black;
+}
+#menu{
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    text-align: right;
+}
+#icon i{
+    margin: 1px;
+    padding: 5px;
+}
+#dropdown{
+    border: 1px solid gray;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background-color: white;
+    text-align: left;
+    padding: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 390px;
+}
+#icon{
+    text-align: right;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: white;
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.menu_back1{
+    background-color: #808080;
+}
+.menu_back2{
+    background-color: #404040;
+}
